# split_slice

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
src/: lib.rs
